--- a/index.html
+++ b/index.html
@@ -18,11 +18,25 @@
 </head>
 
 <body class="bg-info text-dark">
-  <h1 class="display-1 text-primary">Bootstrap Classes</h1>
 
-<p class="text-info bg-dark">We linked this page to Bootstrap's CSS, which lets us borrow their styling rules by attaching certain CLASS NAMES!</p>
+  <div class="container-fluid bg-light">
+  <h1 class="display-1 text-primary text-center">Bootstrap Classes</h1>
+</div>
 
-<p>hello</p>
+<div class="container">
+<p class="text-info bg-dark bg-gradient lead rounded">We linked this page to Bootstrap's CSS, which lets us borrow their styling rules by attaching certain <span class="mark">CLASS NAMES</span>
+to any element we want to style.</p>
+</div>
+
+
+<p class="small text-end">This paragraph follows the font COLOR rule from the body's class name list.</p>
+
+
+<p>Bootstrap has TYPOGRAPHY classes to format text. These classes change the font 
+  <span class="fs-1">size</span>, font 
+  <span class="fw-bold">weight</span>, and font 
+  <span class="fst-italic">style</span>
+</p>
 
 </body>
 </html>
