--- a/index.html
+++ b/index.html
@@ -38,5 +38,12 @@ to any element we want to style.</p>
   <span class="fst-italic">style</span>
 </p>
 
+<div class="container text-center">
+
+  <img class="img-fluid rounded-circle" src="https://images.unsplash.com/photo-1569112135534-e6d5939279a7?fm=jpg&q=60&w=3000&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTF8fGNpdHklMjBhZXN0aGV0aWN8ZW58MHx8MHx8fDA%3D">
+
+
+</div>
+
 </body>
 </html>
