--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 </head>
 
-<body class="bg-info text-dark">
+<body class="bg-info-subtle text-dark">
 
   <div class="container-fluid bg-light">
   <h1 class="display-1 text-primary text-center">Bootstrap Classes</h1>
@@ -33,7 +33,7 @@ to any element we want to style.</p>
 
 
 <p>Bootstrap has TYPOGRAPHY classes to format text. These classes change the font 
-  <span class="fs-1">size</span>, font 
+  <span class="fs-1"> size</span>, font 
   <span class="fw-bold">weight</span>, and font 
   <span class="fst-italic">style</span>
 </p>
@@ -42,6 +42,44 @@ to any element we want to style.</p>
 
   <img class="img-fluid rounded-circle" src="https://images.unsplash.com/photo-1569112135534-e6d5939279a7?fm=jpg&q=60&w=3000&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTF8fGNpdHklMjBhZXN0aGV0aWN8ZW58MHx8MHx8fDA%3D">
 
+
+</div>
+
+<div class="container">
+
+  <h2 class="p-4">Reusable UI Components</h2>
+  <p>Bootstraps provides code snippets that we can use in our own pages for common things like buttons, pop-up windows (modals), cards, slideshows (carousels)...</p>
+
+  <h3>BOOTSTRAP BUTTONS:</h3>
+  <div class="container text-center">
+  <button class="btn btn-primary"> Primary </button>
+  <button class="btn btn-secondary"> Secondary </button>
+  <br>
+  <button class="btn btn-outline-dark"> Outline (any color)</button>
+  <br>
+  <button class="btn btn-sm btn-info"> Smaller </button>
+  <button class="btn btn-lg btn-info"> Larger </button>
+
+  </div>
+
+
+</div>
+
+
+<div class="container-fluid">
+  <h3>BOOTSTRAP CARDS:</h3>
+  <p>For more complex components like cards, go to the <a href="https://getbootstrap.com/">Bootstrap Website</a> and find an example you like. Then you can just copy & paste the code!</p>
+
+
+  <div class="card">
+  <img src="https://images.unsplash.com/photo-1569112135534-e6d5939279a7?fm=jpg&q=60&w=3000&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTF8fGNpdHklMjBhZXN0aGV0aWN8ZW58MHx8MHx8fDA%3D" class="card-img-top">
+  <div class="card-body">
+    <h5 class="card-title">Card title</h5>
+    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card’s content.</p>
+    <a href="#" class="btn btn-primary">Go somewhere</a>
+  </div>
+
+</div>
 
 </div>
 
